--- a/.github/workflows/update-coverage-include.yml
+++ b/.github/workflows/update-coverage-include.yml
@@ -6,6 +6,7 @@ on:
       - amd-integration
     paths:
       - 'flashinfer/**/*.py'
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -34,13 +35,11 @@ jobs:
       - name: Run update script
         id: update
         run: |
-          python3 scripts/update_coverage_include.py > update_log.txt 2>&1 || (cat update_log.txt && exit 1)
+          python3 scripts/update_coverage_include.py
           if git diff --quiet pyproject.toml; then
             echo "changed=false" >> $GITHUB_OUTPUT
-            cat update_log.txt
           else
             echo "changed=true" >> $GITHUB_OUTPUT
-            cat update_log.txt
           fi
 
       - name: Create Pull Request
