--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,7 +135,7 @@ force_grid_wrap = 0
 include_trailing_comma = true
 line_length = 80
 multi_line_output = 3
-skip = ["flashinfer/_version.py"]
+skip = ["flashinfer/_version.py", "flashinfer/cascade.py"]
 use_parentheses = true
 
 
