--- a/amd-flashinfer-jit-cache/pyproject.toml
+++ b/amd-flashinfer-jit-cache/pyproject.toml
@@ -42,5 +42,5 @@ write_to = "amd-flashinfer-jit-cache/amd_flashinfer_jit_cache/_version.py"
 tag_regex = "^v?(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)(?:[+](?P<local>[a-zA-Z0-9.]+))?$"
 version_scheme = "no-guess-dev"
 local_scheme = "no-local-version"
-git_describe_command = ["python", "../scripts/git_describe_rocm.py"]
+git_describe_command = ["python", "scripts/git_describe_rocm.py"]
 fallback_version = "0.0.0"
