Port quantization kernels to HIP

--- a/flashinfer/csrc_rocm/CMakeLists.txt
+++ b/flashinfer/csrc_rocm/CMakeLists.txt
@@ -63,3 +63,8 @@ install(TARGETS flashinfer_hip_kernels DESTINATION flashinfer)
 
 flashinfer_configure_prebuilt_uris()
 message(STATUS "AMD-FlashInfer AOT PyTorch extensions configured")
+
+# Quantization operations
+file(GLOB_RECURSE QUANTIZATION_SRCS quantization.cu
+     flashinfer_quantization_ops.cu)
+list(APPEND FLASHINFER_SRCS ${QUANTIZATION_SRCS})
