Feature: Port quantization module to ROCm/HIP (#145)
### Summary
Ports the quantization module (bit-packing operations) to HIP, enabling
`packbits` and `segment_packbits` functions on AMD GPUs. This unblocks
prefill.py dependencies and completes another core FlashInfer feature
for the AMD port.

### Changes

#### Core Implementation
- **`include/flashinfer/quantization.cuh`**: Unified header supporting
both CUDA and HIP
- Replaced `#include "utils.cuh"` → `#include <gpu_iface/utils.cuh>` to
avoid CUDA-only headers
- Replaced `FLASHINFER_CUDA_CALL` → `FI_GPU_CALL` for platform
abstraction
- Added conditional hipCUB/CUB includes with `namespace block_ops`
abstraction
- Migrated to gpu_iface types: `gpuError_t`, `gpuStream_t`,
`gpuSuccess`, `gpuLaunchKernel`
- Kernel qualifiers: `__global__` → `FI_GLOBAL_QUAL`, `__shared__` →
`FI_SHARED_QUAL`

#### ROCm Backend
- **`flashinfer/csrc_rocm/quantization.cu`**: PyTorch C++ wrapper for
HIP
  - Added `#include <gpu_iface/gpu_runtime_compat.hpp>`
  - Replaced CUDA APIs with HIP equivalents:
- `c10::cuda::OptionalCUDAGuard` →
`c10::hip::OptionalHIPGuardMasqueradingAsCUDA`
- `at::cuda::getCurrentCUDAStream()` → `at::hip::getCurrentHIPStream()`
    - `cudaError_t` → `gpuError_t`
    - `cudaSuccess` → `gpuSuccess`
    - `cudaGetErrorString` → `gpuGetErrorString`

- **`flashinfer/csrc_rocm/flashinfer_quantization_ops.cu`**: PyBind11
module definition

- **`flashinfer/csrc_rocm/CMakeLists.txt`**: Added quantization sources
to build

#### Python API
- **`flashinfer/quantization.py`**: No changes required
(backend-agnostic JIT design)

### Technical Approach
- **Unified header strategy**: Single `quantization.cuh` with platform
detection, avoiding code duplication
- **hipCUB compatibility**: Direct 1:1 API match with CUB (BlockLoad,
BLOCK_LOAD_VECTORIZE)
- **Leveraged existing gpu_iface**: Reused established abstraction layer
for types and functions
- **Consistent with csrc_rocm patterns**: Matches PyTorch HIP
integration used in othe

--- a/flashinfer/csrc_rocm/CMakeLists.txt
+++ b/flashinfer/csrc_rocm/CMakeLists.txt
@@ -20,6 +20,8 @@ file(
   "${CMAKE_CURRENT_SOURCE_DIR}/single_prefill.cu"
   "${CMAKE_CURRENT_SOURCE_DIR}/sampling.cu"
   "${CMAKE_CURRENT_SOURCE_DIR}/renorm.cu"
+  "${CMAKE_CURRENT_SOURCE_DIR}/quantization.cu"
+  "${CMAKE_CURRENT_SOURCE_DIR}/flashinfer_quantization_ops.cu"
   "${CMAKE_CURRENT_SOURCE_DIR}/flashinfer_sampling_ops.cu")
 
 set(COMMON_HIP_INCLUDE_DIRS
