--- a/pyproject.toml
+++ b/pyproject.toml
@@ -202,6 +202,7 @@ testpaths = [
     "tests/test_block_sparse_indices_to_vector_sparse_offsets.py",
     "tests/test_decode_prefill_lse.py",
     "tests/test_logits_cap_hip.py",
+    "tests/test_quantization.py",
     "tests/test_non_contiguous_decode.py",
     "tests/test_non_contiguous_prefill.py",
     "tests/test_norm_hip.py",
