Update pre commit hooks with AMD-specific things

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,3 +57,19 @@ repos:
       # Run the formatter.
       - id: ruff-format
         types_or: [ python, pyi ]
+
+  - repo: https://github.com/cheshirekow/cmake-format-precommit
+    rev: v0.6.13
+    hooks:
+      - id: cmake-format
+        additional_dependencies: [pyyaml>=5.1]
+
+  # REUSE compliance check for specific directories only
+  - repo: local
+    hooks:
+      - id: reuse-selective
+        name: reuse (selective files)
+        entry: ./scripts/reuse-check-selective.sh
+        language: system
+        files: ^(include/flashinfer/attention/generic/|include/gpu_iface/).*\.(cuh|hpp|h)$
+        pass_filenames: true
