--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,7 +49,9 @@ repos:
       -   id: mypy
           args: ["--config-file", "pyproject.toml", "--exclude", "flashinfer-cubin/"]
           files: ^flashinfer/
-          exclude: ^(flashinfer-cubin/|3rdparty/|build/)
+          # ROCm-specific files import torch which is intentionally absent from the
+          # pre-commit mypy env (ROCm torch must be installed from AMD's ROCm repo).
+          exclude: ^(flashinfer-cubin/|3rdparty/|build/|flashinfer/decode_rocm\.py|flashinfer/prefill_rocm\.py)
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
