Update and reorganize HIP tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,28 +174,23 @@ ignore = [
 filterwarnings = [
     "ignore::DeprecationWarning",
 ]
-# Verbose output
-addopts = "-v"
-# HIP-specific test files - running 'pytest' with no args runs only these
+# Verbose output; importlib mode avoids __init__.py package-root walk
+addopts = "-v --import-mode=importlib"
+norecursedirs = ["test_helpers"]
+pythonpath = ["tests", "tests/test_helpers"]
+# AMD/HIP test suite: rocm_tests/ directory for all AMD-authored tests,
+# plus explicit upstream test paths that are verified HIP-compatible.
+# Running 'pytest' with no args runs exactly these tests.
 testpaths = [
-    "tests/test_activation.py",
-    "tests/test_aot_hip.py",
-    "tests/test_batch_decode_kernels_hip.py",
-    "tests/test_batch_decode_vllm.py",
-    "tests/test_batch_prefill_kernels_hip.py",
-    "tests/test_block_sparse_indices_to_vector_sparse_offsets.py",
-    "tests/test_decode_prefill_lse.py",
-    "tests/test_logits_cap.py",
-    "tests/test_quantization.py",
-    "tests/test_non_contiguous_decode.py",
-    "tests/test_non_contiguous_prefill.py",
-    "tests/test_norm_hip.py",
-    "tests/test_page.py",
-    "tests/test_rope_hip.py",
-    "tests/test_logits_processor_hip.py",
-    "tests/test_sampling_hip.py",
-    "tests/test_single_prefill_kernels_hip.py",
-    "tests/test_sliding_window_hip.py",
+    "tests/rocm_tests",
+    "tests/attention/test_decode_prefill_lse.py",
+    "tests/attention/test_logits_cap.py",
+    "tests/attention/test_non_contiguous_decode.py",
+    "tests/attention/test_non_contiguous_prefill.py",
+    "tests/attention/test_page.py",
+    "tests/utils/test_activation.py",
+    "tests/utils/test_block_sparse_indices_to_vector_sparse_offsets.py",
+    "tests/utils/test_quantization.py",
 ]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
